date and time picker pop up
both date and time are set through editTexts, and show up in the
editText once entered (set). need to fix: don't make keyboard pop up,
make it directly go to date picker/time picker

--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -11,5 +11,6 @@
     <string name="go_to_events">Go to Events</string>
     <string name="title_activity_event_hub">EventHub</string>
     <string name="event_hub_i">This is a list of events</string>
+    <string name="event_time">Enter Event Time</string>
 
 </resources>
